--- a/data_to_html.ipynb
+++ b/data_to_html.ipynb
@@ -2,17 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "a4dffeb9-c303-4f25-866b-def9154f72b3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
+   "id": "a61b5076-268f-47ab-95e5-741ed6faa0d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\theri\\\\Desktop\\\\wallfacer\\\\Project2'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "0249331f-a755-4213-9db0-ae4b68ae2d5a",
    "metadata": {},
    "outputs": [],
@@ -24,19 +46,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "be3d2bd1-804c-4040-9219-fe910970b084",
    "metadata": {},
    "outputs": [],
    "source": [
-    "genre_df.to_html('genre_data.html', index=False)\n",
-    "type_df.to_html('type_data.html', index=False)\n",
-    "combined_df.to_html('combined_data.html', index=False)"
+    "genre_df.to_html('genres/genre_data.html', index=False)\n",
+    "type_df.to_html('type/type_data.html', index=False)\n",
+    "combined_df.to_html('resources/combined_data.html', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "a05ab36d-f398-4909-a526-2aec3ec0e8e2",
    "metadata": {},
    "outputs": [
