--- a/data_to_html.ipynb
+++ b/data_to_html.ipynb
@@ -46,6 +46,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "id": "e2c7b2b7-4f2a-444b-9327-691ed917a38a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year_df = pd.read_csv('years/years_merged.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "id": "be3d2bd1-804c-4040-9219-fe910970b084",
    "metadata": {},
@@ -58,36 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "a05ab36d-f398-4909-a526-2aec3ec0e8e2",
+   "execution_count": 15,
+   "id": "5cd26faf-1166-4b58-a45d-0ba9faaf23f5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub data rate exceeded.\n",
-      "The Jupyter server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--ServerApp.iopub_data_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "ServerApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
-      "ServerApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "genre_table = genre_df.to_html()\n",
-    "print(table)"
+    "year_df.to_html('years/years_data.html', index=False)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d661ff78-63bf-4f18-a5f0-bf9a4842148b",
+   "id": "a9f7c67d-3cff-4cb6-89c6-5ddb6286909f",
    "metadata": {},
    "outputs": [],
    "source": []
