--- a/data_to_html.ipynb
+++ b/data_to_html.ipynb
@@ -41,17 +41,8 @@
    "source": [
     "genre_df = pd.read_csv('genres/genres.csv')\n",
     "type_df = pd.read_csv('type/types.csv')\n",
+    "year_df = pd.read_csv('years/years_merged.csv')\n",
     "combined_df = pd.read_csv('resources/combined.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "e2c7b2b7-4f2a-444b-9327-691ed917a38a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "year_df = pd.read_csv('years/years_merged.csv')"
    ]
   },
   {
@@ -63,17 +54,8 @@
    "source": [
     "genre_df.to_html('genres/genre_data.html', index=False)\n",
     "type_df.to_html('type/type_data.html', index=False)\n",
+    "year_df.to_html('years/years_data.html', index=False)\n",
     "combined_df.to_html('resources/combined_data.html', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "5cd26faf-1166-4b58-a45d-0ba9faaf23f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "year_df.to_html('years/years_data.html', index=False)\n"
    ]
   },
   {
